# football-analytics-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: football_intelligence_pipeline.py
dbt/football_intelligence/: .user.yml  dbt_project.yml  profiles.yml
dbt/football_intelligence/models/: sources.yml
dbt/football_intelligence/models/marts/: schema.yml
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docker/streamlit/: Dockerfile
docs/: README.md  api.md  architecture.md  data_model.md  dbt.md  pipeline.md  troubleshooting.md
infra/terraform/: main.tf  outputs.tf  variables.tf
scripts/: check_environment.sh
src/football_intelligence/: __init__.py  logging.py
src/football_intelligence/api/: __init__.py  main.py
src/football_intelligence/config/: settings.py
src/football_intelligence/dashboard/: app.py
src/football_intelligence/ingestion/: __init__.py  base.py
src/football_intelligence/io/: __init__.py  bigquery.py  gcs.py  local.py
src/football_intelligence/loaders/: __init__.py
src/football_intelligence/quality/: checks.py
src/football_intelligence/transformations/: __init__.py
tests/fixtures/transfermarkt/: squad_sample.html  transfers_sample.html
tests/unit/: test_api_queries.py  test_api_routes.py  test_bigquery_repository.py  test_dashboard_queries.py  test_health.py  test_statsbomb_bigquery_loader.py  test_statsbomb_client.py  test_statsbomb_parsers.py  test_statsbomb_silver_transform.py  test_transfermarkt_parsers.py  test_transfermarkt_silver.py
(+52 files in other folders)
