[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-intelligence-platform"
version = "0.1.0"
description = "End-to-end football data engineering platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apache-airflow>=2.9,<3.0",
  "beautifulsoup4>=4.12",
  "dbt-bigquery>=1.8",
  "fastapi>=0.111",
  "google-cloud-bigquery>=3.25",
  "google-cloud-storage>=2.18",
  "httpx>=0.27",
  "pandas>=2.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "requests-cache>=1.2",
  "streamlit>=1.37",
  "tenacity>=8.5",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
